--- a/WebService/app/src/main/AndroidManifest.xml
+++ b/WebService/app/src/main/AndroidManifest.xml
@@ -24,7 +24,8 @@
         <activity
             android:name=".Navigation"
             android:label="@string/title_activity_navigation"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".Information_personnel"></activity>
     </application>
 
 </manifest>
