--- a/WebService/app/build.gradle
+++ b/WebService/app/build.gradle
@@ -25,7 +25,7 @@ dependencies {
     testCompile 'junit:junit:4.12'
 
     compile fileTree(dir: 'libs', include: ['*.jar'])
-
+    compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.mcxiaoke.volley:library:1.0.19'
     compile 'com.android.support:design:24.2.1'
